--- a/src/components/dashboardcomponents/AddLinkPopUp/styles.css
+++ b/src/components/dashboardcomponents/AddLinkPopUp/styles.css
@@ -241,7 +241,7 @@ pre {
 .ml-1 {
   margin-left: 0.25rem;
 }
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -249,7 +249,7 @@ h5,
 h6 {
   font-size: inherit;
   font-weight: inherit;
-}
+} */
 .w-full {
   width: 100%;
 }
@@ -350,7 +350,7 @@ button {
 }
 button {
   background-color: transparent;
-  background-image: none;
+  /* background-image: none; */
 }
 [type="button"],
 [type="reset"],
