--- a/src/components/sharedcomponents/styles.css
+++ b/src/components/sharedcomponents/styles.css
@@ -12,10 +12,12 @@
   align-items: center;
   /* box-shadow: 0 0 20px 6px #090b6f85; */
 }
+.formclass {
+  padding-bottom: 30px;
+}
 a {
   text-decoration: none;
   color: blue;
-  padding-right: 10px;
 }
 a:active {
   color: blue;
@@ -126,7 +128,7 @@ button[disabled] {
 
   color: #fff;
   font-size: 16px;
-  /* padding: 12px 35px; */
+  padding: 12px 35px;
   border-radius: 50px;
   display: inline-block;
   border: 0;
@@ -140,6 +142,7 @@ button {
   cursor: pointer;
   /* color: #fff; */
   font-size: 16px;
+  /* padding: 12px 35px; */
   padding: 12px 20px;
   border-radius: 50px;
   display: inline-block;
@@ -184,4 +187,20 @@ button {
   100% {
     transform: rotate(360deg);
   }
+}
+.blue {
+  color: blue;
+}
+.activebutton {
+  cursor: pointer;
+  /* float: right; */
+  color: #fff;
+  font-size: 16px;
+  padding: 12px 35px;
+  border-radius: 50px;
+  display: inline-block;
+  border: 0;
+  outline: 0;
+  box-shadow: 0px 4px 20px 0px darkgrey;
+  background-image: linear-gradient(135deg, blue 10%, blue 100%);
 }
