--- a/src/routes/Dashboard/styles.css
+++ b/src/routes/Dashboard/styles.css
@@ -7,6 +7,8 @@
 }
 .parent {
   display: flex;
+  height: 90%;
+
   /* flex-wrap: wrap; */
   /* justify-content: space-between; */
   /* height: 100vh; */
@@ -19,7 +21,9 @@
   width: 100%;
   height: 63px;
   justify-content: center;
-  border-bottom: 1px solid grey;
+  border-bottom: 2px solid lightgray;
+
+  /* border-bottom: 2px solid grey; */
 }
 .topdiv {
   display: flex;
@@ -32,7 +36,8 @@
   width: 30%;
   /* justify-content: space-around; */
   align-items: center;
-  margin-left: 40px;
+  margin-left: 20px;
+  font-size: 1.125rem;
 }
 .topdiv1 {
   display: flex;
@@ -48,11 +53,17 @@
   justify-content: space-around;
   align-items: center;
   margin: 10px;
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.fullheight {
+  height: 100vh;
+  font-weight: 600;
 }
 
 .left1 {
   display: flex;
-  width: 20%;
+  width: 25%;
   /* flex-direction: column; */
   background-color: white;
   display: none;
@@ -77,6 +88,9 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  height: 100%;
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
 .header {
@@ -98,19 +112,18 @@
   /* flex-wrap: wrap; */
   /* justify-content: space-around; */
   /* margin-top: 20px; */
-  margin: 30px;
+  margin: 20px;
 }
 
 .mainuplink {
   display: flex;
-  height: 263px;
-  background-color: blue;
+  height: 283px;
+  background-image: linear-gradient(to top right, #6c5dd3, #4364ac);
   border-radius: 12px;
 }
 .mainleft {
   display: flex;
   width: 70%;
-  background-color: blue;
   height: 263px;
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
@@ -120,7 +133,6 @@
   /* width: 30%; */
   justify-content: center;
   align-items: center;
-  background-color: blue;
   height: 263px;
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
@@ -171,6 +183,7 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin: 20px;
 }
 .footer {
   /* height: 40px; */
@@ -199,39 +212,56 @@ h2 {
 .sidenav2 {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin-left: 10px;
   color: black;
   margin-bottom: 0px;
   margin-top: 10px;
   line-height: 2;
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
 }
 .nounderline {
-  /* display: flex;
-  width: 25%;
-  justify-content: center;
-  align-items: center; */
   text-decoration: none;
   cursor: pointer;
-  /* padding: 10px; */
-  /* padding: 20px; */
+  --tw-text-opacity: 1;
+  color: rgba(156, 163, 175, var(--tw-text-opacity));
+  height: 30px;
 }
 .underline {
-  /* display: flex;
-  width: 25%;
-  justify-content: center;
-  align-items: center; */
-  text-decoration: underline;
-  /* text-decoration-color: blue; */
+  border-bottom: 1px solid;
+
+  --tw-text-opacity: 1;
+  color: rgba(107, 133, 230, var(--tw-text-opacity));
   cursor: pointer;
-  /* padding: 20px; */
-  /* text-decoration-thickness: 5px;
-  padding-bottom: 15px;
-  /* border-bottom-style: solid;
-  /* border-bottom-width: 3.1px; */
-  border-bottom-width: 3.1px;
-  width: fit-content;
-  /* padding: 10px; */
+
+  border-bottom-width: 2.1px;
+  height: 30px;
+  font-weight: 800;
+}
+.underlineForFolders {
+  border-bottom: 1px solid;
+
+  --tw-text-opacity: 1;
+  color: rgba(107, 133, 230, var(--tw-text-opacity));
+  cursor: pointer;
+
+  border-bottom-width: 2.1px;
+
+  font-weight: 800;
+  margin-right: 30px;
+}
+.underlineForTags {
+  border-bottom: 1px solid;
+
+  --tw-text-opacity: 1;
+  color: rgba(107, 133, 230, var(--tw-text-opacity));
+  cursor: pointer;
+
+  border-bottom-width: 2.1px;
+
+  font-weight: 800;
+  margin-left: 30px;
 }
 .movelinkimageright {
   display: flex;
@@ -243,7 +273,7 @@ h2 {
   border: 1px solid #ccc;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   -moz-box-shadow: 2px 2px 3px #666;
   -webkit-box-shadow: 2px 2px 3px #666;
   box-shadow: 2px 2px 3px #666;
@@ -253,12 +283,15 @@ h2 {
   -webkit-appearance: none;
   width: 30vw;
   margin-left: 20px;
+  color: white;
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 133, 230, var(--tw-bg-opacity));
 }
 .shortrounded {
   border: 1px solid #ccc;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
   -moz-box-shadow: 2px 2px 3px #666;
   -webkit-box-shadow: 2px 2px 3px #666;
   box-shadow: 2px 2px 3px #666;
@@ -268,6 +301,9 @@ h2 {
   -webkit-appearance: none;
   width: 15vw;
   margin-left: 20px;
+  color: white;
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 133, 230, var(--tw-bg-opacity));
 }
 .white {
   color: white;
@@ -297,9 +333,33 @@ h2 {
   position: relative;
 }
 .modal1 {
+  /* display: flex;
+  position: relative;
+  flex-direction: column; */
+  height: 300px;
+  width: 130px;
   display: flex;
   position: relative;
   flex-direction: column;
+  overflow-y: scroll;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.overflow-auto {
+  /* overflow: auto; */
+  height: 330px;
+  overflow-y: scroll;
+  /* height: 360px; */
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.flex-col {
+  flex-direction: column;
+}
+.h-full {
+  height: 100%;
 }
 .modal11 {
   width: 70%;
@@ -468,6 +528,12 @@ items-center {
 }
 .ml-1 {
   margin-left: 0.25rem;
+  /* width: 5px; */
+  margin-left: 0px;
+  padding-left: 12px;
+  padding-top: 12px;
+  padding-right: 12px;
+  padding-bottom: 12px;
 }
 .flex-col {
   -webkit-flex-direction: column;
@@ -506,47 +572,37 @@ a {
   height: 10px;
 } */
 input.nosubmit {
-  border: 1px solid #555;
-  width: 110px;
-  /* width: 90px; */
-  /* width: 100%; */
-  padding: 9px 4px 9px 40px;
   background: transparent
     url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
     no-repeat 13px center;
+  padding-left: 30px;
+  width: 100%;
+  border-radius: 6px;
+  border: none;
+  /* outline: none; */
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
+  /* outline: none; */
+  /* background-color: rgba(243,244,246,var(--tw-bg-opacity)); */
+  height: 40px;
 }
+
 .plusButton {
-  /* padding-left: 12px; */
-  padding-right: 12px;
-  padding-left: 12px;
+  font-weight: 500;
+  font-size: 24px;
   background-color: rgba(0, 0, 0, 0);
   color: rgb(106, 135, 230);
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  --tw-border-opacity: 1;
-  border-color: rgba(107, 133, 230, var(--tw-border-opacity));
-  border-style: solid;
+  --tw-bg-opacity: 1;
+  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
   border-width: 1px;
-  /* border-radius: 1.5rem; */
-  /* width: 100%; */
-  /* padding: 0; */
-  /* line-height: inherit; */
-  /* color: inherit; */
-  /* cursor: pointer; */
-  /* background-color: transparent; */
-  /* background-image: none; */
-  /* -webkit-appearance: button; */
-  /* text-transform: none; */
-  /* font-family: inherit; */
-  /* font-size: 100%; */
-  /* line-height: 1.15; */
-  /* margin: 0;
-  /* padding-bottom: 12px;
-  padding-top: 12px; */
+  width: 32px;
+  margin-left: 10px;
 }
 .scrollinglist {
-  height: 360px;
-  overflow-y: scroll;
+  /* height: 360px;
+  overflow-y: scroll; */
 }
 .cancel {
   font-size: 24px;
@@ -707,4 +763,246 @@ input.nosubmit {
   --tw-ring-color: rgba(59, 130, 246, 0.5);
   --tw-ring-offset-shadow: 0 0 transparent;
   --tw-ring-shadow: 0 0 transparent;
+}
+p-1 {
+  padding: 0.25rem;
+}
+.overflow-auto {
+  overflow: auto;
+}
+.flex-auto {
+  flex: 1 1 auto;
+}
+.w-full {
+  width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
+.flex-col {
+  flex-direction: column;
+}
+.w-14 {
+  width: 3.5rem;
+}
+.h-14 {
+  height: 3.5rem;
+}
+.font-extralight {
+  font-weight: 200;
+}
+.text-lg,
+.text-xl {
+  line-height: 1.75rem;
+}
+.text-lg {
+  font-size: 1.125rem;
+}
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+.mt-5 {
+  margin-top: 1.25rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 24px;
+  font-weight: 900;
+}
+blockquote,
+dd,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+  margin: 0;
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.text-center {
+  text-align: center;
+}
+.projectsButton {
+  /* background-color: #4364ac; */
+  --tw-bg-opacity: 1;
+  background-color: rgba(107, 133, 230, var(--tw-bg-opacity));
+  padding: 12px;
+  color: white;
+}
+.foldersdown {
+  width: 70%;
+  margin-top: 20px;
+}
+.tagsdown {
+  margin-top: 20px;
+}
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+.shadow-lg,
+.shadow-md {
+  box-shadow: 0 0 transparent, 0 0 transparent, var(--tw-shadow);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 transparent),
+    var(--tw-ring-shadow, 0 0 transparent), var(--tw-shadow);
+}
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.justify-center {
+  justify-content: center;
+}
+.items-center {
+  align-items: center;
+}
+.flex-col {
+  flex-direction: column;
+}
+.translate-y-1\/4 {
+  --tw-translate-y: 25%;
+}
+.transform,
+.transform-gpu {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+}
+.transform {
+  -webkit-transform: translateX(var(--tw-translate-x))
+    translateY(var(--tw-translate-y)) rotate(var(--tw-rotate))
+    skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x))
+    scaleY(var(--tw-scale-y));
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y))
+    rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y))
+    scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.w-40 {
+  width: 10rem;
+}
+.flex {
+  display: flex;
+}
+.z-50 {
+  z-index: 50;
+}
+.absolute {
+  position: absolute;
+  top: 30px;
+}
+.text-center {
+  text-align: center;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.w-full {
+  width: 100%;
+}
+.text-center {
+  text-align: center;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.rounded-md {
+  border-radius: 0.375rem;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.w-full {
+  width: 100%;
+}
+.ml-3 {
+  margin-left: 0.75rem;
+}
+.relative {
+  position: relative;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+.justify-around {
+  justify-content: space-around;
+}
+.items-center {
+  align-items: center;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.flex {
+  display: flex;
+}
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+blockquote,
+dd,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+  margin: 0;
+}
+.folderarrowmargin {
+  margin-right: 10px;
 }
